refactor(service): 重构数据清洗流水线服务层